#351 - Entfernte Assertions wieder hinzugefügt